# insurtech-api

./: .env.dev  Dockerfile  Makefile  README.md  docker-compose.yaml  manage.py  pyproject.toml
core/: admin.py  models.py  urls.py
core/api/: filters.py  urls.py
core/api/v1/: serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_policy.py  0003_rename_cost_policy_cover_policy_customer.py  0004_historicalpolicy.py  0005_alter_policy_customer.py
democranceapi/: asgi.py  permissions.py  settings.py  urls.py  wsgi.py
tests/: factories.py  test_models.py  test_permissions.py  test_serializers.py  test_views.py
